get rid of warnings in CSV